[gd_scene load_steps=8 format=2]

[ext_resource path="res://Inputs/Menu_Elements/Obu_Menu_Anim/PepperPig_000.png" type="Texture" id=1]
[ext_resource path="res://Inputs/Menu_Elements/Obu_Menu_Anim/PepperPig_001.png" type="Texture" id=2]
[ext_resource path="res://Inputs/Theme/fat_theme.tres" type="Theme" id=3]
[ext_resource path="res://Scenes/Menu.gd" type="Script" id=4]
[ext_resource path="res://Inputs/Theme/Font/rocko/RockoUltraFLF.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=2]
size = 200
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[node name="Menu" type="Node2D"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 74.0
margin_top = 7.0
margin_right = 1868.0
margin_bottom = 740.0
custom_colors/font_color = Color( 1, 0.741176, 0.741176, 1 )
custom_colors/font_color_shadow = Color( 0.727615, 0.448118, 0.754883, 1 )
custom_constants/line_spacing = -50
custom_constants/shadow_offset_y = 20
custom_fonts/font = SubResource( 2 )
text = "COZY NEWS
UPDATE"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PepperStanding" type="AnimatedSprite" parent="."]
position = Vector2( 484, 653 )
frames = SubResource( 1 )
playing = true

[node name="Button" type="Button" parent="."]
margin_left = 1296.0
margin_top = 624.0
margin_right = 1806.0
margin_bottom = 737.0
focus_mode = 0
theme = ExtResource( 3 )
enabled_focus_mode = 0
text = "Start Game!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 1296.0
margin_top = 768.0
margin_right = 1806.0
margin_bottom = 881.0
focus_mode = 0
theme = ExtResource( 3 )
enabled_focus_mode = 0
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 1296.0
margin_top = 912.0
margin_right = 1806.0
margin_bottom = 1025.0
focus_mode = 0
theme = ExtResource( 3 )
enabled_focus_mode = 0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="focus_entered" from="Button" to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="Button" to="." method="_on_focus_entered"]
[connection signal="pressed" from="Button" to="." method="_on_StartButton_pressed"]
[connection signal="focus_entered" from="Button2" to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="Button2" to="." method="_on_focus_entered"]
[connection signal="pressed" from="Button2" to="." method="_on_CreditsButton_pressed"]
[connection signal="focus_entered" from="Button3" to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="Button3" to="." method="_on_focus_entered"]
[connection signal="pressed" from="Button3" to="." method="_on_QuitButton_pressed"]
